	PR c/29129 	* c-decl.c (grokdeclarator): Mark [*] arrays in field declarators 	as having variable size.  Do not give an error for unnamed 	parameters with [*] declarators.  Give a warning for type names 	with [*] declarators and mark them as variable size. 	* c-parser.c (c_parser_sizeof_expression): Do not give an error 	for sizeof applied to [*] type names.

testsuite:
	* c90-arraydecl-1.c: Do not expect error for [*] in abstract
	declarator.
	* vla-6.c: Likewise.  Expect warning not error for [*] lexically
	inside function prototype but not part of parameter declarator.
	* vla-11.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@143918 138bc75d-0d04-0410-961f-82ee72b054a4